[package]
name = "flaarino"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.19"
twilight-gateway = "0.8.2"
twilight-http = "0.8.3"
twilight-model = "0.8.3"
twilight-interactions = "0.8.1"
dotenv = "0.15.0"
twilight-embed-builder = "0.8.0"

[dependencies.tokio]
version = "1.5.0"
features = ["full"] 

[dependencies.twilight-util]
version = "0.8.1"
features = ["builder"]